src/snapshots/afrotd__parser__tests__interpreation_html_9.2.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            A1 verlässt das Spielfeld während eines Downs. Team A stellt sich
            mit 10 Spielern im Huddle auf. Ersatzspieler A12 betritt das Feld
            und A2 täuscht vor, es zu verlassen, stellt sich aber in der Nähe
            der Seitenlinie auf, um dort einen „Hide out“- Pass zu erhalten.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter vom Previous Spot. Dies ist ein
                vorgetäuschtes Auswechseln, um den Gegner zu verwirren.
            </p>
        </details>
    </div>
</article>
