src/snapshots/afrotd__parser__tests__interpreation_html_9.2.2_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.2.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Während sich ein Team bereit macht, ein Fieldgoal durchzuführen,
            geht der potentielle Holder zu seiner Teamzone und fragt nach dem
            Kicking Tee. Das Tee wird auf das Feld geworfen und der Spieler,
            der sich in Richtung seiner Teamzone bewegt hatte, läuft nach dem
            Snap downfield. Der Ball wird zu dem Spieler gesnappt, der sich in
            der Kickposition befand, und dieser wirft einen Pass zu dem
            Spieler, der nach dem Tee gefragt hatte.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter vom Previous Spot.
            </p>
        </details>
    </div>
</article>
