src/snapshots/afrotd__parser__tests__interpreation_html_9.2.3_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.3.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball spielbereit ist und sich der Umpire in seiner
            regulären Position befindet, ersetzt Team A schnell einige Spieler
            durch Ersatzspieler, steht die erforderliche Sekunde still und
            snappt den Ball. Der Umpire versucht, zum Ball zu gelangen, um der
            Defense zu erlauben, ebenfalls auszuwechseln, schafft es aber
            nicht, den Snap zu verhindern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Down muss unterbrochen, die Game Clock angehalten und der
                Defense erlaubt werden, ihre Auswechselungen in Reaktion auf
                Team A’s Auswechselung vorzunehmen. Kein Foul. Die Play Clock
                wird auf 25 Sekunden gesetzt und startet mit dem Signal zur
                Ballfreigabe. Die Game Clock startet mit der Ballfreigabe oder
                dem Snap, je nachdem, welche Voraussetzungen vorlagen, als der
                Down unterbrochen wurde. Der Referee informiert Team A’s Head
                Coach, dass jede weitere derart gelagerte Aktion ein Foul für
                unsportliches Verhalten durch das Team gemäß Regel 9.2.3
                darstellt (Regel 3.5.2).
            </p>
        </details>
    </div>
</article>
