src/snapshots/afrotd__parser__tests__interpreation_html_9.2.5_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.5.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim Eröffnungskickoff fängt B22 den Kick an seiner Goalline und
            trägt den Ball an Team B’s Seitenlinie entlang. Als der Sidejudge
            in der Schiedsrichterzone an der Seitenlinie entlang das
            Spielgeschehen verfolgt, läuft er entweder gegen einen Team B-Coach
            oder ein B-Teammitglied oder muss einem Team B-Coach oder einem
            BTeammitglied ausweichen. B22 wird an der A-20 ins Aus gedrängt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Beide Situationen sind physische Behinderungen eines
                Schiedsrichters während eines Downs. Es gibt dafür keine
                Warnung. Team BFoul für unsportliches Verhalten, welches als
                Dead Ball Foul geahndet wird. Nach der 15-Meterstrafe ist es
                Team B’s Ball, 1. und 10 von der A-35.
            </p>
        </details>
    </div>
</article>
