src/snapshots/afrotd__parser__tests__interpreation_html_9.2.6_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.6.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Während ein Kickoff weit zurückgetragen wird, kommt der Head Coach
            des Kicking Teams auf das Spielfeld und protestiert energisch und
            ärgerlich, dass das Receiving Team eine Flagge für Halten während
            des Laufes hätte erhalten müssen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unsportliches Verhalten Foul gegen den Head Coach. Wird als
                Dead Ball Foul durchgeführt. 15-Meterstrafe vom Succeeding
                Spot. Dieses Foul zählt als eines der unsportlichen
                Verhalten-Fouls gegen den Head Coach. Wenn es das zweite
                Unsportliche Verhalten dieses Head Coachs ist, muss er
                disqualifiziert werden. Ein Head Coach, der disqualifiziert
                wurde, darf einen neuen Head Coach benennen.
            </p>
        </details>
    </div>
</article>
