src/snapshots/afrotd__parser__tests__interpreation_html_9.2.6_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.6.II
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 10 von der B-40. Gegen Ende der 3. Spielperiode in einem
            sehr ruppigen Spiel läuft QB A12 die Seitenlinie entlang und dreht
            sich an der B-15 in Richtung der Seitenlinie. Er geht an diesem
            Punkt aus dem Spielfeld und wird dann von B21 hart getroffen. Alle
            Spieler beider Teams verlassen ihre Teamzonen und es entsteht ein
            großes Gedränge mit viel Schubsen, Drängeln usw. Die Schiedsrichter
            arbeiten daran, die Ordnung wiederherzustellen und nach einiger
            Zeit kehren beide Teams in ihre Teamzonen zurück. Nachdem die
            Ordnung wiederhergestellt ist, versammeln sich die Schiedsrichter
            und stellen fest, dass sich B21, B55, A44 und A54 an einer
            Schlägerei beteiligt hatten. Zusätzlich verhängt die Crew gegen
            jeden Spieler von Team A und Team B ein Foul wegen unsportlichen
            Verhaltens. A88 (a) wurde zuvor im Spiel wegen unsportlichen
            Verhaltens bestraft; (b) wird wegen unsportlichen Verhaltens zu
            Beginn der vierten Spielperiode bestraft.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball, 1. und 10 an der B-15, da alle Strafen für
                persönliche Dead Ball Fouls und Dead Ball Fouls für
                unsportliches Verhalten ausgeglichen werden. B21, B55, A44 und
                A54 werden disqualifiziert (Regel10.1.5 ). Bei allen
                verbleibenden Spielern beider Teams erhöht sich der Zähler für
                unsportliches Verhalten Fouls. Die Schiedsrichter sollten die
                Situation „alle Spieler erhalten einen UNV“ sehr sparsam und
                nur in Situationen einsetzen, in denen bestimmte, am Spiel
                beteiligte Spieler, nicht identifiziert werden können und die
                Gefahr besteht, die Kontrolle über das Spiel zu verlieren. A88
                (a) wird nach dem Down des Feldes verwiesen, da dies sein
                zweites Foul wegen unsportlichen Verhaltens in diesem Spiel
                ist; (b) wird nach dem Down in der vierten Spielperiode
                disqualifiziert, da dies sein zweites Foul wegen unsportlichen
                Verhaltens in diesem Spiel gewesen sein wird.
            </p>
        </details>
    </div>
</article>
