src/snapshots/afrotd__parser__tests__interpreation_html_9.3.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.3.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Mitspieler des Passers oder Ballträgers führt mit der (den)
            geschlossenen Hand (Händen) einen Schlag gegen einen Gegner und
            trifft ihn unter den Schultern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Persönliches Foul. Strafe – 15 Meter. Strafdurchführung vom
                Basic Spot oder Previous Spot, wenn sich das Foul hinter der
                neutralen Zone ereignet. Safety, wenn sich das Foul hinter Team
                A’s Goalline ereignet.
            </p>
        </details>
    </div>
</article>
